# pypitravel

./: .gitignore  AGENTS.md  README.md  build.ps1  pyproject.toml
.github/workflows/: publish-pypi.yml
.mimocode/plans/: 1783171276342-cosmic-rocket.md
src/pypitravel/: __init__.py  __main__.py  cli.py  gui.py  journey_parser.py  paths.py
src/pypitravel/static/: index.html
tools/: list_cache.py
