[project]
name = "pypitravel"
version = "0.1.0"
description = "圆周旅迹行程规划导出与可视化工具"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
]
requires-python = ">=3.12"

[project.scripts]
pypitravel = "pypitravel.cli:main"

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
allow_dirty = true
tag_name = "v{new_version}"
message = "chore(release): bump version {current_version} → {new_version}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
